<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/judul"
        android:textColor="@color/black"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginTop="100dp"
        android:text="@string/biodata"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/nama"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text3"
        android:layout_alignBottom="@id/text3"
        android:layout_toEndOf="@id/text3"
        android:layout_toRightOf="@id/text3"
        android:gravity="center"
        android:text="@string/andi_tenri_awaru"
        android:textColor="@color/black"
        android:textSize="60sp" />


</RelativeLayout>