<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <RelativeLayout
        android:id="@+id/ly1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/purple_200"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/nama_app"
            android:textSize="60sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ly2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ly1"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:text="@string/biodata"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginStart="30sp"
            android:layout_marginTop="10dp"
            android:text="@string/nama"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/text2"
            android:layout_alignBottom="@id/text2"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/text2"
            android:text="@string/andi_tenri_awaru"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:layout_marginStart="30sp"
            android:layout_marginTop="10dp"
            android:text="@string/jenis_kelamin"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/text4"
            android:layout_alignBottom="@id/text4"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/text4"
            android:text="@string/perempian"
            android:textSize="20sp" />


    </RelativeLayout>

    <Button
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="10dp"
        android:layout_alignBottom="@id/ly1"
        android:layout_marginBottom="-50dp"/>
</RelativeLayout>